-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 15
-
Component/s: hotspot
-
b14
-
Verified
Stress test fails with
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/scratch/mesos/slaves/7cfa21b9-afde-4338-a459-d3e0a13ec793-S788/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/df11ff93-e900-4d51-b07d-e154d42f3aae/runs/6f3231c3-73ad-49b4-bbf9-1e99361502b0/workspace/open/src/hotspot/share/jfr/recorder/checkpoint/types/jfrTypeSet.cpp:140), pid=55195, tid=33795
# assert(!cld->is_unsafe_anonymous()) failed: invariant
#
# JRE version: Java(TM) SE Runtime Environment (15.0) (fastdebug build 15-internal+0-2020-02-15-0555227.leonid.mesnik.ks-apps)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-internal+0-2020-02-15-0555227.leonid.mesnik.ks-apps, mixed mode, sharing, tiered, compressed oops, g1 gc, bsd-amd64)
# Core dump will be written. Default location: core.55195
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:MaxRAMPercentage=12 -XX:MaxRAMPercentage=50 -Djava.net.preferIPv6Addresses=false -XX:+DisplayVMOutputToStderr -Xlog:gc*,gc+heap=debug:gc.log:uptime,timemillis,level,tags -XX:+DisableExplicitGC -XX:+StartAttachListener --illegal-access=deny -Djava.io.tmpdir=/scratch/mesos/slaves/7cfa21b9-afde-4338-a459-d3e0a13ec793-S1127/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fe1c3e39-564a-4a84-8430-1ea538ee248f/runs/466c88e1-c760-4d67-a230-7e21d83e9810/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/java.io.tmpdir -Duser.home=/scratch/mesos/slaves/7cfa21b9-afde-4338-a459-d3e0a13ec793-S1127/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fe1c3e39-564a-4a84-8430-1ea538ee248f/runs/466c88e1-c760-4d67-a230-7e21d83e9810/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/user.home -agentpath:/scratch/mesos/jib-master/install/2020-02-15-0555227.leonid.mesnik.ks-apps/macosx-x64-debug.test/hotspot/jtreg/native/libJvmtiStressModule.dylib -XX:NativeMemoryTracking=detail -Djdk.test.lib.random.seed=8353669835268227337 applications.kitchensink.process.stress.Main /scratch/mesos/slaves/7cfa21b9-afde-4338-a459-d3e0a13ec793-S1127/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fe1c3e39-564a-4a84-8430-1ea538ee248f/runs/466c88e1-c760-4d67-a230-7e21d83e9810/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/kitchensink.final.properties
Host: Macmini5,3 x86_64 2000 MHz, 8 cores, 4G, Darwin 17.5.0
Time: Sat Feb 15 07:25:36 2020 GMT elapsed time: 122 seconds (0d 0h 2m 2s)
--------------- T H R E A D ---------------
Current thread (0x00007ff9a9127800): JavaThread "JFR Recorder Thread" daemon [_thread_in_vm, id=33795, stack(0x000070000cb38000,0x000070000cc38000)]
Stack: [0x000070000cb38000,0x000070000cc38000], sp=0x000070000cc37330, free space=1020k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0xb45b5b] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6e5
V [libjvm.dylib+0xb46277] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x47
V [libjvm.dylib+0x33880c] report_vm_error(char const*, int, char const*, char const*, ...)+0x145
V [libjvm.dylib+0x59c311] cld_id(ClassLoaderData const*, bool)+0x5f
V [libjvm.dylib+0x59a79d] write_klass(JfrCheckpointWriter*, Klass const*, bool)+0x1f1
V [libjvm.dylib+0x59a59e] write__klass(JfrCheckpointWriter*, void const*)+0xc4
V [libjvm.dylib+0x59c7fb] JfrPredicatedTypeWriterImplHost<Klass const*, SerializePredicate<Klass const*>, &(write__klass(JfrCheckpointWriter*, void const*))>::operator()(Klass const* const&)+0x29
V [libjvm.dylib+0x59c76e] JfrArtifactCallbackHost<Klass const*, CompositeFunctor<Klass const*, JfrTypeWriterHost<JfrPredicatedTypeWriterImplHost<Klass const*, SerializePredicate<Klass const*>, &(write__klass(JfrCheckpointWriter*, void const*))>, 20u>, KlassArtifactRegistrator> >::do_artifact(void const*)+0x24
V [libjvm.dylib+0x2da0d9] ClassLoaderData::classes_do(void (*)(Klass*))+0x35
V [libjvm.dylib+0x2ddbb8] ClassLoaderDataGraph::classes_do(void (*)(Klass*))+0x36
V [libjvm.dylib+0x59b859] JfrTypeSet::serialize(JfrCheckpointWriter*, JfrCheckpointWriter*, bool, bool)+0x19b
V [libjvm.dylib+0x551317] JfrCheckpointManager::flush_type_set()+0xa3
V [libjvm.dylib+0x585051] JfrRecorderService::flush()+0x21f
V [libjvm.dylib+0x5843b1] JfrRecorderService::invoke_flush()+0x11d
V [libjvm.dylib+0x5850c7] JfrRecorderService::flushpoint()+0x33
V [libjvm.dylib+0x586585] recorderthread_entry(JavaThread*, Thread*)+0x8b
V [libjvm.dylib+0xabcd97] JavaThread::thread_main_inner()+0x1a1
V [libjvm.dylib+0xabc949] JavaThread::run()+0x23d
V [libjvm.dylib+0xab92ed] Thread::call_run()+0x11b
V [libjvm.dylib+0x933498] thread_native_entry(Thread*)+0xe0
C [libsystem_pthread.dylib+0x3661] _pthread_body+0x154
C [libsystem_pthread.dylib+0x350d] _pthread_body+0x0
C [libsystem_pthread.dylib+0x2bf9] thread_start+0xd
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/scratch/mesos/slaves/7cfa21b9-afde-4338-a459-d3e0a13ec793-S788/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/df11ff93-e900-4d51-b07d-e154d42f3aae/runs/6f3231c3-73ad-49b4-bbf9-1e99361502b0/workspace/open/src/hotspot/share/jfr/recorder/checkpoint/types/jfrTypeSet.cpp:140), pid=55195, tid=33795
# assert(!cld->is_unsafe_anonymous()) failed: invariant
#
# JRE version: Java(TM) SE Runtime Environment (15.0) (fastdebug build 15-internal+0-2020-02-15-0555227.leonid.mesnik.ks-apps)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-internal+0-2020-02-15-0555227.leonid.mesnik.ks-apps, mixed mode, sharing, tiered, compressed oops, g1 gc, bsd-amd64)
# Core dump will be written. Default location: core.55195
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
--------------- S U M M A R Y ------------
Command Line: -Xbootclasspath/a:. -XX:+UnlockDiagnosticVMOptions -XX:+WhiteBoxAPI -XX:MaxRAMPercentage=12 -XX:MaxRAMPercentage=50 -Djava.net.preferIPv6Addresses=false -XX:+DisplayVMOutputToStderr -Xlog:gc*,gc+heap=debug:gc.log:uptime,timemillis,level,tags -XX:+DisableExplicitGC -XX:+StartAttachListener --illegal-access=deny -Djava.io.tmpdir=/scratch/mesos/slaves/7cfa21b9-afde-4338-a459-d3e0a13ec793-S1127/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fe1c3e39-564a-4a84-8430-1ea538ee248f/runs/466c88e1-c760-4d67-a230-7e21d83e9810/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/java.io.tmpdir -Duser.home=/scratch/mesos/slaves/7cfa21b9-afde-4338-a459-d3e0a13ec793-S1127/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fe1c3e39-564a-4a84-8430-1ea538ee248f/runs/466c88e1-c760-4d67-a230-7e21d83e9810/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/user.home -agentpath:/scratch/mesos/jib-master/install/2020-02-15-0555227.leonid.mesnik.ks-apps/macosx-x64-debug.test/hotspot/jtreg/native/libJvmtiStressModule.dylib -XX:NativeMemoryTracking=detail -Djdk.test.lib.random.seed=8353669835268227337 applications.kitchensink.process.stress.Main /scratch/mesos/slaves/7cfa21b9-afde-4338-a459-d3e0a13ec793-S1127/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/fe1c3e39-564a-4a84-8430-1ea538ee248f/runs/466c88e1-c760-4d67-a230-7e21d83e9810/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_runthese_RunThese30M_java/scratch/0/kitchensink.final.properties
Host: Macmini5,3 x86_64 2000 MHz, 8 cores, 4G, Darwin 17.5.0
Time: Sat Feb 15 07:25:36 2020 GMT elapsed time: 122 seconds (0d 0h 2m 2s)
--------------- T H R E A D ---------------
Current thread (0x00007ff9a9127800): JavaThread "JFR Recorder Thread" daemon [_thread_in_vm, id=33795, stack(0x000070000cb38000,0x000070000cc38000)]
Stack: [0x000070000cb38000,0x000070000cc38000], sp=0x000070000cc37330, free space=1020k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0xb45b5b] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x6e5
V [libjvm.dylib+0xb46277] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x47
V [libjvm.dylib+0x33880c] report_vm_error(char const*, int, char const*, char const*, ...)+0x145
V [libjvm.dylib+0x59c311] cld_id(ClassLoaderData const*, bool)+0x5f
V [libjvm.dylib+0x59a79d] write_klass(JfrCheckpointWriter*, Klass const*, bool)+0x1f1
V [libjvm.dylib+0x59a59e] write__klass(JfrCheckpointWriter*, void const*)+0xc4
V [libjvm.dylib+0x59c7fb] JfrPredicatedTypeWriterImplHost<Klass const*, SerializePredicate<Klass const*>, &(write__klass(JfrCheckpointWriter*, void const*))>::operator()(Klass const* const&)+0x29
V [libjvm.dylib+0x59c76e] JfrArtifactCallbackHost<Klass const*, CompositeFunctor<Klass const*, JfrTypeWriterHost<JfrPredicatedTypeWriterImplHost<Klass const*, SerializePredicate<Klass const*>, &(write__klass(JfrCheckpointWriter*, void const*))>, 20u>, KlassArtifactRegistrator> >::do_artifact(void const*)+0x24
V [libjvm.dylib+0x2da0d9] ClassLoaderData::classes_do(void (*)(Klass*))+0x35
V [libjvm.dylib+0x2ddbb8] ClassLoaderDataGraph::classes_do(void (*)(Klass*))+0x36
V [libjvm.dylib+0x59b859] JfrTypeSet::serialize(JfrCheckpointWriter*, JfrCheckpointWriter*, bool, bool)+0x19b
V [libjvm.dylib+0x551317] JfrCheckpointManager::flush_type_set()+0xa3
V [libjvm.dylib+0x585051] JfrRecorderService::flush()+0x21f
V [libjvm.dylib+0x5843b1] JfrRecorderService::invoke_flush()+0x11d
V [libjvm.dylib+0x5850c7] JfrRecorderService::flushpoint()+0x33
V [libjvm.dylib+0x586585] recorderthread_entry(JavaThread*, Thread*)+0x8b
V [libjvm.dylib+0xabcd97] JavaThread::thread_main_inner()+0x1a1
V [libjvm.dylib+0xabc949] JavaThread::run()+0x23d
V [libjvm.dylib+0xab92ed] Thread::call_run()+0x11b
V [libjvm.dylib+0x933498] thread_native_entry(Thread*)+0xe0
C [libsystem_pthread.dylib+0x3661] _pthread_body+0x154
C [libsystem_pthread.dylib+0x350d] _pthread_body+0x0
C [libsystem_pthread.dylib+0x2bf9] thread_start+0xd