8239376: JFR: assert(!cld->is_unsafe_anonymous()) failed: invariant

Reviewed-by: coleenp, lfoltan, hseigel